fix alignment of sponsors table

--- a/content/css/sel4.css
+++ b/content/css/sel4.css
@@ -266,11 +266,10 @@ a.divLink {
 .sponsors {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  /*grid-template-columns: repeat(3, 1fr);*/
-  /*grid-template-rows: repeat(3, 1fr);*/
+  grid-template-columns: repeat(3, 1fr);
+  /*grid-template-rows: repeat(4, 1fr);*/
   grid-column-gap: 30px;
   grid-row-gap: 40px;
-  margin: auto;
   width: 50%;
 }
 
@@ -283,6 +282,27 @@ a.divLink {
   align-content: center;
 
 }
+
+/* 2-col grid*/
+.sponsors-2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
+  /*grid-template-rows: repeat(3, 1fr);*/
+  grid-column-gap: 30px;
+  grid-row-gap: 40px;
+  width: 50%;
+}
+/* 1-col grid*/
+.sponsors-1 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 40px;
+  width: 50%;
+}
+
 
 @media (max-width: 60em) {
   .hidden-sponsor-mobile {
